lib/src/chunked_widget_to_image_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `native/**.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class ChunkedWidgetToImageBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ChunkedWidgetToImageBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ChunkedWidgetToImageBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// PNG 专用函数
  ffi.Pointer<ImageContext> create_png_context(
    ffi.Pointer<ffi.Char> file_path,
    int width,
    int height,
  ) {
    return _create_png_context(file_path, width, height);
  }

  late final _create_png_contextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ImageContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
          )
        >
      >('create_png_context');
  late final _create_png_context = _create_png_contextPtr
      .asFunction<
        ffi.Pointer<ImageContext> Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  int write_png_data(
    ffi.Pointer<ImageContext> ctx,
    ffi.Pointer<ffi.Uint8> rgba_data,
    int src_stride,
    int row_count,
  ) {
    return _write_png_data(ctx, rgba_data, src_stride, row_count);
  }

  late final _write_png_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ImageContext>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
          )
        >
      >('write_png_data');
  late final _write_png_data = _write_png_dataPtr
      .asFunction<
        int Function(
          ffi.Pointer<ImageContext>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
        )
      >();

  int save_png_image(ffi.Pointer<ImageContext> ctx) {
    return _save_png_image(ctx);
  }

  late final _save_png_imagePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ImageContext>)>>(
        'save_png_image',
      );
  late final _save_png_image = _save_png_imagePtr
      .asFunction<int Function(ffi.Pointer<ImageContext>)>();

  /// 将字节数据加载到内存并返回指针
  ffi.Pointer<ffi.Uint8> load_bytes_to_memory(
    ffi.Pointer<ffi.Uint8> bytes,
    int size,
  ) {
    return _load_bytes_to_memory(bytes, size);
  }

  late final _load_bytes_to_memoryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
        >
      >('load_bytes_to_memory');
  late final _load_bytes_to_memory = _load_bytes_to_memoryPtr
      .asFunction<
        ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>, int)
      >();

  void rgba_to_i420(
    ffi.Pointer<ffi.Uint8> sample,
    int sample_size,
    ffi.Pointer<ffi.Uint8> dst_y,
    int dst_stride_y,
    ffi.Pointer<ffi.Uint8> dst_u,
    int dst_stride_u,
    ffi.Pointer<ffi.Uint8> dst_v,
    int dst_stride_v,
    int src_width,
    int src_height,
  ) {
    return _rgba_to_i420(
      sample,
      sample_size,
      dst_y,
      dst_stride_y,
      dst_u,
      dst_stride_u,
      dst_v,
      dst_stride_v,
      src_width,
      src_height,
    );
  }

  late final _rgba_to_i420Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('rgba_to_i420');
  late final _rgba_to_i420 = _rgba_to_i420Ptr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
        )
      >();

  /// JPEG 专用函数
  ffi.Pointer<ImageContext> create_jpeg_context(
    ffi.Pointer<ffi.Char> file_path,
    int width,
    int height,
  ) {
    return _create_jpeg_context(file_path, width, height);
  }

  late final _create_jpeg_contextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ImageContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
          )
        >
      >('create_jpeg_context');
  late final _create_jpeg_context = _create_jpeg_contextPtr
      .asFunction<
        ffi.Pointer<ImageContext> Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  int write_jpeg_data(
    ffi.Pointer<ImageContext> ctx,
    ffi.Pointer<ffi.Uint8> rgba_data,
    int src_stride,
    int row_count,
  ) {
    return _write_jpeg_data(ctx, rgba_data, src_stride, row_count);
  }

  late final _write_jpeg_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ImageContext>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
          )
        >
      >('write_jpeg_data');
  late final _write_jpeg_data = _write_jpeg_dataPtr
      .asFunction<
        int Function(
          ffi.Pointer<ImageContext>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
        )
      >();

  int save_jpeg_image(ffi.Pointer<ImageContext> ctx) {
    return _save_jpeg_image(ctx);
  }

  late final _save_jpeg_imagePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ImageContext>)>>(
        'save_jpeg_image',
      );
  late final _save_jpeg_image = _save_jpeg_imagePtr
      .asFunction<int Function(ffi.Pointer<ImageContext>)>();
}

/// Image上下文结构
final class ImageContext extends ffi.Struct {
  /// 图片宽度
  @ffi.Int()
  external int width;

  /// 图片高度
  @ffi.Int()
  external int height;

  /// 当前已写入的行
  @ffi.Int()
  external int current_row;

  /// 文件指针
  external ffi.Pointer<ffi.Void> file_ptr;

  /// 结构指针
  external ffi.Pointer<ffi.Void> image_ptr;

  /// 错误处理指针
  external ffi.Pointer<ffi.Void> info_ptr;
}
